--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/collections.js"></script>
     </body>
 </html>
