--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
         <script src="js/lib/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+        <div id="container"></div>
+        
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
+        <script id="songTemplate" type="text/html">
+            <%= title %>
+            <button>Listen</button>
+            <% if (plays > 1000) { %>
+                <span class="popular">Popular</span>
+            <% } %>
+        </script>
         <script src="js/main.js"></script>
         <script src="js/collections.js"></script>
+        <script src="js/views.js"></script>
     </body>
 </html>
