--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <script src="js/main.js"></script>
         <script src="js/collections.js"></script>
         <script src="js/views.js"></script>
+        <script src="js/events.js"></script>
     </body>
 </html>
