35. Event Aggregator to Coordinate Multiple Views

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     </head>
     <body>
         <ul id="vehicles"></ul>
-        
+        <div id="container">
+            <div id="venues-container"></div>
+            <div id="map-container">
+                <span id="venue-name"></span>
+            </div>
+        </div>
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
